# py_partizan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat  migration.md  prompt.md
src/py_partizan/: __init__.py  __main__.py  gpg_log_20260430_122436.txt
src/py_partizan/cipherlib/: __init__.py  armor_binary.py  encrypt_decrypt.py  gpg_context.py  key_management.py  sign_verify.py
src/py_partizan/partizan_guard/: app.py
src/py_partizan/partizan_guard/css/: app.tcss  encrypt_decrypt.tcss  key_detail.tcss  key_list.tcss  key_management.tcss  passphrase_modal.tcss
src/py_partizan/partizan_guard/screens/: encrypt_decrypt.py  key_management.py
src/py_partizan/partizan_guard/screens/modals/: generate_key_modal.py  import_key_modal.py  trust_modal.py
src/py_partizan/partizan_guard/widgets/: key_detail.py  key_list.py  operation_log.py  passphrase_modal.py
tests/: test_py_partizan.py
