[tool.poetry]
name = "py_partizan"
version = "0.1.4"
description = "A package for doing great things!"
authors = ["Dylan Garrett"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
textual = "^8.2.4"
python-dotenv = "^1.2.2"
python-gnupg = "^0.5.6"
pgpy = "^0.6.0"
pyperclip = "^1.11.0"


[tool.poetry.group.dev.dependencies]
ipython = "^9.13.0"
faker = "^40.15.0"
textual-dev = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
partizan-gpg = "py_partizan.partizan_guard.app:main"